workspace = { members = ["ddf", "gps", "pim"] }
[package]
name = "data_merging_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "~1.37", features = ["rt", "rt-multi-thread", "macros"] }
color-eyre = "~0.6"
ddf = { path = "ddf"}
gps = { path = "gps"}
pim = { path = "pim"}