[package]
name = "ddf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "~0.7", features = ["postgres", "runtime-tokio", "uuid", "macros"] }
color-eyre = "~0.6"
tokio = { version = "~1.37", features = ["full"] }
poem = "~3.0"
poem-openapi = { version = "~5.0", features = ["swagger-ui", "openapi-explorer"] }
futures = "~0.3"
models = { path = "../models" }
