[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "~0.7", features = ["macros"] }
poem-openapi = "~5.0"
serde = { version = "~1.0", features = ["derive"] }
rand_derive2 = "0.1"
rand = "0.8"
